# preschoolers_training_site

./: .env.example  .env.example.py  .gitignore  pyproject.toml  readme.md  repo.db  requirements.txt
backend/: auth_utils.py  config.py  dependencies.py  main.py
backend/api/: admin.py  auth.py  content.py  upload.py
backend/api/services/: auth_service.py  content_service.py  stats_service.py
backend/db/: base.py
backend/schemas/: auth.py  category.py  stat.py  task.py  user.py
frontend/src/: admin.js  api.js  app.js  auth.js  categories.js  notifications.js  profile.js  tasks.js
frontend/static/: admin.html  categories.html  index.html  profile.html  tasks.html
