[project]
name = "preschoolers-training-site"
version = "0.1.0"
description = "FastAPI training site for preschoolers"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "email-validator>=2.3",
    "fastapi>=0.120",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11",
    "pydantic-settings>=2.11",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.38",
]

[tool.uv]
package = false
